@@ -1,3 +1,9 @@
+2008-09-20  Abel Cheung  <abelcheung@gmail.com>
+
+	* notation/mup.php:
+	- (conversion_step1) Make sure license file is used on Windows.
+	- (conversion_step2) Fix transparency issues on Windows. Holy crap.
+
 2008-09-19  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender-class.php:
